--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.16.0",
+    "@types/node": "^17.0.31",
     "prettier": "2.4.1",
     "shelljs": "^0.8.5",
     "typescript": "~4.5.2",
